# MagicMirror

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  FaceAlignment.cpp.bk  FaceAlignment.hpp.bk  MTCNN.h
src/: CMakeLists.txt  main.cpp  prefix.hpp
